v153
(xx/06/17)

Changes / Improvements / Optimizations:
General | NTPD updates: Increased verbosity of completion/errors: https://github.com/Fourdee/DietPi/pull/1035
General | GnuPG: Now installed by default on all DietPi systems. Required for OpenPGP key management, data signing etc: https://github.com/Fourdee/DietPi/issues/1032#issuecomment-311995136
DietPi-Software | You can now uninstall software, if free space is below the 500MB threshold. Software installations are still prevented: https://github.com/Fourdee/DietPi/issues/1037
DietPi-Services | You can now check status of all DietPi controlled services with "dietpi-services status". Many thanks to @joaofl for adding this feature!: https://github.com/Fourdee/DietPi/pull/1025
DietPi-Software | Stretch: Updated additional software (eg: Plex/Mosquitto etc) repos to use stretch repos, where available.
DietPi-Software | NZBget: Added optimizations to reduce load on CPU, and, write cache specific to total RAM: https://github.com/Fourdee/DietPi/issues/1040

Bug fixes:
DietPi-Autostart | Lower frame buffer for AmiBerry SDL2 now set correctly (480p).
DietPi-Autostart | Custom: Converted to SystemD service. This resolves issues with previously auto login system we used on headless devices: https://github.com/Fourdee/DietPi/issues/1024
DietPi-Config | Changing NTPD modes, will no longer flood the over current screen with print: https://github.com/Fourdee/DietPi/pull/1035
DietPi-Config | OPi Zero (H2+): Resolved an issue where setting 3.5mm output would not unmute lineout. Many thanks to @kurtjcu! https://github.com/Fourdee/DietPi/issues/1026
DietPi-Software | Resolved an issue where Mono libary would fail to install on ARMv6. This effected Emby, Sonarr, Radarr, Jackett. Many thanks to Larmo for reporting this: https://github.com/Fourdee/DietPi/issues/1023
DietPi-Software | AmiBerry: No longer installs Mono libs.
DietPi-Software | Emby: Now installs required Mono libs.