@@ -1,0 +1,15 @@
+#Internal Drives---------------------------------------------------
+UUID=497d51ff-a4c5-4ead-9195-329f4d97ac66 /               ext4    noatime,nodiratime,errors=remount-ro 0       1
+UUID=c796bac5-7cf9-464f-aecd-788904a1b3da /boot           ext4    noatime,nodiratime 0       2
+tmpfs 			/tmp  			tmpfs 	defaults,noatime,nodev,nosuid,mode=1777  0 0
+tmpfs 			/var/log 		tmpfs 	defaults,size=20m,noatime,nodev,nosuid,mode=1777  0 0
+tmpfs 			/DietPi 		tmpfs 	defaults,size=10m,noatime,nodev,nosuid,mode=1777  0 0
+
+#Samba Client------------------------------------------------------
+#/mnt/samba . Please use dietpi-config and the networking menu to setup this mount
+
+#FTP Client Mount--------------------------------------------------
+#/mnt/ftp_client . Please use dietpi-config and the networking menu to setup this mount
+
+#External Drives---------------------------------------------------
+#NB: Please use dietpi-drive_manager to setup and control your external drives.
