@@ -142,45 +142,79 @@
 
 		CHOICE=$?
 		if (( $CHOICE == 0 )); then
+
 			if (( $OPTION == 1 )); then
+
 				TARGETMENUID=1
 
 				if (( $HW_MODEL == 20 )); then
+
 					TARGETMENUID=0
 					Info_HW_OptionNotSupported
+
 				fi
+
 			 elif (( $OPTION == 2 )); then
+
 				TARGETMENUID=14
+
 				if (( $HW_MODEL == 20 )); then
+
 					TARGETMENUID=0
 					Info_HW_OptionNotSupported
+
 				fi
+
 			elif (( $OPTION == 3 )); then
+
 				TARGETMENUID=4
+
 				if (( $HW_MODEL == 20 )); then
+
 					TARGETMENUID=0
 					Info_HW_OptionNotSupported
+
 				fi
+
 			elif (( $OPTION == 4 )); then
+
 				TARGETMENUID=3
+
 			elif (( $OPTION == 5 )); then
+
 				TARGETMENUID=7
+
 			elif (( $OPTION == 6 )); then
+
 				TARGETMENUID=5
+
 			elif (( $OPTION == 7 )); then
+
 				 TARGETMENUID=8
+
 			elif (( $OPTION == 8 )); then
+
 				 TARGETMENUID=16
+
 		   elif (( $OPTION == 9 )); then
+
 				/DietPi/dietpi/dietpi-autostart
 				REBOOT_REQUIRED=1
+
 			elif (( $OPTION == 10 )); then
+
 				TARGETMENUID=11
+
 		   else
+
 				Menu_Exit
+
 			fi
+
 		else
+
 			Menu_Exit
+
 		fi
 
 	}
