@@ -24,8 +24,10 @@
 
 	#Exit path for VM
 	if (( $HW_MODEL == 20 )); then
+
 		echo -e "\nNotice: CPU Governors are not available for VM.\n"
 		exit
+
 	fi
 
 	CPU_CORES=$(nproc --all)
