@@ -42,6 +42,7 @@
 	# HW_MODEL 32 OrangePi Zero (H2+)
 	# HW_MODEL 31 OrangePi One
 	# HW_MODEL 30 OrangePi PC
+	# HW_MODEL 21 x86_64 native (PC)
 	# HW_MODEL 20 VM x64 (VMware VirtualBox)
 	# HW_MODEL 13 oDroid U3
 	# HW_MODEL 12 oDroid C2
@@ -542,6 +543,11 @@
 				HW_MODEL_DESCRIPTION='OrangePi PC'
 				IMAGE_ADDITIONAL_CREDITS='ARMbian'
 				HW_CPUID=1
+
+			#x86_64 native PC
+			elif (( $HW_MODEL == 21 )); then
+
+				HW_MODEL_DESCRIPTION='Native PC'
 
 			#VM
 			elif (( $HW_MODEL == 20 )); then
