@@ -172,16 +172,54 @@ _EOF_
 
 	}
 
+	Reset_NTPD(){
+
+		killall -w /DietPi/dietpi/func/run_ntpd
+		killall -w ntpd
+		rm /etc/dietpi/.ntpd_exit_status &> /dev/null
+
+	}
+
 	Check_NTPD_Status(){
 
 		if (( $(route | awk '{print $4}' | grep -ci -m1 'UG') )); then
 
-			/DietPi/dietpi/func/run_ntpd status
-			if (( $? != 0 )); then
+			while true
+			do
 
-				Error_NTPD_Failed
+				/DietPi/dietpi/func/run_ntpd status
+				if (( $? != 0 )); then
 
-			fi
+					#	Endless retry
+					if (( ! $USER_INPUTS )); then
+
+						Reset_NTPD
+
+					#	Ask
+					else
+
+						whiptail --title "NTPD update failed" --yesno "NTPD timesync has not yet completed, or, failed to update. To prevent issues with outdated system time during installations, you must either:\n\n - Retry NTPD update (recommended)\nThis will kill the current NTPD process and retry NTPD update. If this fails again, please use option below.\n\n - Override (last resort)\nThis will override NTPD update checks, however, your system time will be out of sync and may cause issues during installations.\n\nYou can check the NTPD logs for debugging purposes with:\n   cat /var/log/ntpd.log" --yes-button "Override" --no-button "Retry" --defaultno --backtitle "$WHIP_BACKTITLE" 20 80
+						if (( $? == 1 )); then
+
+							Reset_NTPD
+
+						else
+
+							Reset_NTPD
+							echo 0 > /etc/dietpi/.ntpd_exit_status
+							echo 1 > /etc/dietpi/.ntpd_override
+
+						fi
+
+					fi
+
+				else
+
+					break
+
+				fi
+
+			done
 
 		fi
 
@@ -2947,10 +2985,10 @@ _EOF_
 
 		fi
 
-		#Cache size (MB) 1/8th of total mem
+		#Cache size (MB) 1/10th of total mem
 		if (( $1 == 0 )); then
 
-			output=$(( $(free -m | grep -m1 'Mem:' | awk '{print $2}') / 8 ))
+			output=$(( $(free -m | grep -m1 'Mem:' | awk '{print $2}') / 10 ))
 
 		#Max active downloads
 		elif (( $1 == 1 )); then
@@ -2958,7 +2996,7 @@ _EOF_
 			output=2
 
 			# - Bump up for VM's
-			if (( $HW_MODEL == 20 )); then
+			if (( $HW_MODEL == 20 || $HW_MODEL == 21 )); then
 
 				output=3
 
@@ -2970,7 +3008,7 @@ _EOF_
 			output=20
 
 			# - Bump up for VM's
-			if (( $HW_MODEL == 20 )); then
+			if (( $HW_MODEL == 20 || $HW_MODEL == 21 )); then
 
 				output=40
 
@@ -3003,7 +3041,7 @@ _EOF_
 			output=3
 
 			# - Bump up for VM's
-			if (( $HW_MODEL == 20 )); then
+			if (( $HW_MODEL == 20 || $HW_MODEL == 21 )); then
 
 				output=5
 
@@ -3857,7 +3895,7 @@ _EOF_
 			Banner_Installing
 
 			#x32 x64
-			if (( $HW_MODEL == 20 )); then
+			if (( $HW_MODEL == 20 || $HW_MODEL == 21 )); then
 
 				INSTALL_URL_ADDRESS="http://dietpi.com/downloads/binaries/all/noip_x32_x64.zip"
 
@@ -12753,16 +12791,6 @@ _EOF_
 		/DietPi/dietpi/func/dietpi-notify 2 "- Change apt mirror: 'dietpi-config' > 'Networking: NAS/MISC' > 'Apt Mirror'"
 		/DietPi/dietpi/func/dietpi-notify 2 "- Clear and refresh apt 'apt-get update'"
 		/DietPi/dietpi/func/dietpi-notify 2 "- If problems persist, please create a Git ticket so DietPi can investigate the issue:\n - https://github.com/Fourdee/DietPi/issues\n"
-
-		Exit_Destroy
-
-	}
-
-	Error_NTPD_Failed(){
-
-		#Abort install
-		ERROR_TEXT="NTPD: System time has not been synced/updated correctly.\n\nTo prevent further issues with software installations, DietPi-Software will now exit.\n\nIf problems persist, check the NTPD log:\n   /var/log/ntpd.log\n\nTo override this error, run the following command:\n   echo 0 > /etc/dietpi/.ntpd_exit_status"
-		Error_Display
 
 		Exit_Destroy
 
