@@ -120,16 +120,19 @@
 	#Reset FSTAB
 	cp /DietPi/dietpi/conf/fstab /etc/fstab
 
-	#VM
-	if (( $HW_MODEL == 20 )); then
+	#	X86_64 native
+	if (( $HW_MODEL == 21 )); then
+
+		cp /DietPi/dietpi/conf/fstab_x86_64-native /etc/fstab
+
+	#	VM
+	elif (( $HW_MODEL == 20 )); then
 
 		cp /DietPi/dietpi/conf/fstab_vm /etc/fstab
 
-	fi
-
-	#XU4 requires UUID with 4.9 kernel: https://github.com/Fourdee/DietPi/issues/899#issuecomment-298912660
-	#	NB: Do this on EMMC due to SD mmcblk1
-	if (( $HW_MODEL == 11 )); then
+	#	XU4 requires UUID with 4.9 kernel: https://github.com/Fourdee/DietPi/issues/899#issuecomment-298912660
+	#		NB: Do this on EMMC due to SD mmcblk1
+	elif (( $HW_MODEL == 11 )); then
 
 		UUID_CURRENT=$(blkid /dev/mmcblk0p1 -s UUID -o value)
 		sed -i "s#^/dev/mmcblk0p1#UUID=$UUID_CURRENT#g" /etc/fstab
@@ -149,6 +152,7 @@
 	fi
 
 	systemctl daemon-reload
+	mount -a
 
 	#////////////////////////////////////
 	# Reset cmdline.txt / boot.ini / dietpi.txt
