@@ -1,6 +1,9 @@
 v153
 (xx/06/17)
 
+New Image:
+DietPi for Native PC (x86_64) is now available. This is currently under BETA status, please see the following ticket for updated information: https://github.com/Fourdee/DietPi/issues/1007
+
 Changes / Improvements / Optimizations:
 General | NTPD updates: Increased verbosity of completion/errors: https://github.com/Fourdee/DietPi/pull/1035
 General | GnuPG: Now installed by default on all DietPi systems. Required for OpenPGP key management, data signing etc: https://github.com/Fourdee/DietPi/issues/1032#issuecomment-311995136
@@ -8,6 +11,8 @@ DietPi-Software | You can now uninstall software, if free space is below the 500
 DietPi-Services | You can now check status of all DietPi controlled services with "dietpi-services status". Many thanks to @joaofl for adding this feature!: https://github.com/Fourdee/DietPi/pull/1025
 DietPi-Software | Stretch: Updated additional software (eg: Plex/Mosquitto etc) repos to use stretch repos, where available.
 DietPi-Software | NZBget: Added optimizations to reduce load on CPU, and, write cache specific to total RAM: https://github.com/Fourdee/DietPi/issues/1040
+DietPi-software | BitTorrent (ALL): Write cache memory size is now set to 1/10th of total RAM. Previously 1/8th. This is to prevent excess RAM usage in multiple software combo installations. This applies to new installations only: http://dietpi.com/phpbb/viewtopic.php?f=11&t=2021#p7677
+DietPi-Software | NTPD check improvements: Added options to retry NTPD update, or, override NTPD, when NTPD fails to update.
 
 Bug fixes:
 DietPi-Autostart | Lower frame buffer for AmiBerry SDL2 now set correctly (480p).
